--- a/styles.css
+++ b/styles.css
@@ -1,430 +1,515 @@
-:root{
-    --light-prime: #333533;
-    --prime: #202020;
-    --white : white;
-    --text: #d6d6d6;
-    --accent: #ffd100;
-    --light-accent: #ffee32;
+:root {
+  --light-prime: #333533;
+  --prime: #202020;
+  --white: white;
+  --text: #d6d6d6;
+  --accent: #ffd100;
+  --light-accent: #ffee32;
 }
-body{
-    margin:0;
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--prime);
+.higlight {
+  color: var(--light-accent);
 }
-.sections{
-    padding-top: 13rem;
-    padding-left: 13rem;
-    padding-right: 13rem;
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--prime);
 }
-nav{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    font-weight: 700;
-    padding-right: 13rem;
-    justify-content: right;
-
+.sections {
+  padding-top: 13rem;
+  padding-left: 13rem;
+  padding-right: 13rem;
+  overflow: hidden !important;
 }
-nav a{
-    text-decoration: none;
-    padding-left: 2rem;
-    text-transform: capitalize;
-    font-size: 18px;
-    font-weight: 600;
-    color: var(--text);
-    letter-spacing: 1px;
-    transition: 0.5s;
+nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-weight: 700;
+  padding-right: 13rem;
+  justify-content: right;
+}
+nav a {
+  text-decoration: none;
+  padding-left: 2rem;
+  text-transform: capitalize;
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--text);
+  letter-spacing: 1px;
+  transition: 0.5s;
 }
 nav a:hover,
-footer i:hover{
-    color: var(--accent);
+footer i:hover {
+  color: var(--accent);
 }
-.header{
-    position: relative;
-    top: 0;
-    display: flex;
-    justify-content: space-evenly;
-    height: 60px;
-    width: 100%;
-    background-color: var(--prime);
-    position: fixed;
-    z-index: 999;
-    box-shadow: 0px 0px 10px;
+.header {
+  position: relative;
+  top: 0;
+  display: flex;
+  justify-content: space-evenly;
+  height: 60px;
+  width: 100%;
+  background-color: var(--prime);
+  position: fixed;
+  z-index: 999;
+  box-shadow: 0px 0px 10px;
 }
-.name{
-    display: flex;
-    align-items: center;
-    padding-left: 13rem;
-    font-size:26px;
-    font-weight: 800;
-    color: var(--accent)
+.name {
+  display: flex;
+  align-items: center;
+  padding-left: 13rem;
+  font-size: 26px;
+  font-weight: 800;
+  color: var(--accent);
 }
-.intro{
-    padding-top: 5rem;
+.intro {
+  padding-top: 5rem;
   height: 28rem;
-  border-bottom:3px solid var(--light-prime);
+  border-bottom: 3px solid var(--light-prime);
 }
-.typewrite{
-    text-decoration: none;
-    color: var(--light-accent);
+.typewrite {
+  text-decoration: none;
+  color: var(--light-accent);
 }
-h1{
-    font-size: 50px;
-    font-weight: 800;
-    color: var(--text);
-    margin: 0;
+h1 {
+  font-size: 50px;
+  font-weight: 800;
+  color: var(--text);
+  margin: 0;
 }
-.undertitle{
-    font-size: 18px;
-    color: var(--text);
-    font-family: 'Montserrat', sans-serif;
-    margin-bottom: 30px;
+.undertitle {
+  font-size: 18px;
+  color: var(--text);
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 30px;
 }
 .hire-btn,
-#submit-btn{
-    height: 3rem;
-    width: 8rem;
-    position: relative; 
-    border-radius: 5rem;
-    background-color: var(--prime);
-    border-color: var(--light-accent);
-    border-width: 3px;
-    font-size: 20px;
-    letter-spacing: 1px;
-    transition: 0.5s;
-    
+#submit-btn {
+  height: 3rem;
+  width: 8.5rem;
+  position: relative;
+  border-radius: 5rem;
+  background-color: var(--prime);
+  border-color: var(--light-accent);
+  border-width: 3px;
+  font-size: 20px;
+  letter-spacing: 1px;
+  transition: 0.5s;
 }
 .hire-btn:hover,
-#submit-btn:hover{
-    background-color: var(--light-accent);
-    border: none;
-    cursor: pointer;
+#submit-btn:hover {
+  background-color: var(--light-accent);
+  border: none;
+  cursor: pointer;
 }
-.hire-btn a{
-    text-decoration: none;
-    text-transform: capitalize;
-    color: var(--light-accent);
-    letter-spacing: 1px;
-    transition: 0.5s;
+.hire-btn a {
+  text-decoration: none;
+  text-transform: capitalize;
+  color: var(--light-accent);
+  letter-spacing: 1px;
+  transition: 0.5s;
 }
-.hire-btn:hover>a{
-    color: black;
-    font-weight: 700;
+.hire-btn:hover > a {
+  color: black;
+  font-weight: 700;
 }
+/* 
+span {
+  margin-right: 10px;
+} */
 
-span{
-    margin-right: 10px;
+.sections h2 {
+  font-size: 40px;
+  font-weight: 800;
+  color: var(--light-accent);
+  margin: 0;
+  text-align: center;
+  padding-top: 20px;
 }
-.sections h2{
-
-    font-size: 40px;
-    font-weight: 800;
-    color: var(--light-accent);
-    margin: 0;
-    text-align: center;
-    padding-top: 20px;
+.demo-clip {
+  text-align: center;
 }
-.about{
-    padding: 5rem 5rem;
-    border-bottom: 3px solid var(--light-prime);
+.demo {
+  font-size: 25px;
+  font-weight: 800;
+  color: var(--light-accent);
 }
-p{
-    font-size: 20px;
-    color: var(--text);
-    font-family: 'Montserrat', sans-serif;
-    margin-bottom: 30px;
+.about {
+  padding: 5rem 5rem;
+  border-bottom: 3px solid var(--light-prime);
 }
-.skills{
-    padding: 5rem 10rem;
-    border-bottom: 3px solid var(--light-prime);
+p {
+  font-size: 20px;
+  color: var(--text);
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 30px;
 }
-.html-bar{    
-    width: 90%;
+.skills {
+  padding: 5rem 10rem;
+  border-bottom: 3px solid var(--light-prime);
 }
-.css-bar{
-    width: 90%;
+.html-bar {
+  width: 100%;
 }
-.js-bar {
-    width: 80%;
-}
-.il-bar {
-    width: 80%;
-}
-.ps-bar {
-    width: 90%;
+.angular-bar {
+  width: 93%;
 }
 .java-bar {
-    width: 60%;
+  width: 93%;
 }
-.x{
-    display: inline-block;
+.css-bar {
+  width: 100%;
 }
-.bar{
-    height: 10px;
-    display: inline-block;
-    background-color: var(--light-accent);
-    border-radius: 30px
+.python-bar {
+  width: 60%;
 }
-.container{
-    height: 10px;
-    background-color: var(--light-prime);
-    width: 100%;
-    border-radius: 30px;
+.react-bar {
+  width: 97%;
 }
-.portfolio{
-    border-bottom: 3px solid var(--light-prime);
-    height: 200px;
-    padding: 100px;
+.firebase-bar {
+  width: 90%;
 }
-p a{
-    text-decoration: none;
-    color: var(--light-accent);
-    font-weight: 500;
+.react-native-bar {
+  width: 90%;
 }
-.container-form{
-    width: 100%;
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.js-bar {
+  width: 93%;
 }
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.il-bar {
+  width: 95%;
 }
-.contact p{
-    text-align: center;
+.ps-bar {
+  width: 100%;
 }
 
-#lab{
-    width: 700px;
-    height: 40px;
-    display: flex;
+.x {
+  display: inline-block;
 }
-#name{
-    width: 50%;
-    padding: 3px 2px;
-    margin-right: 2px;
-    padding-left: 3px;
+.bar {
+  height: 10px;
+  display: inline-block;
+  background-color: var(--light-accent);
+  border-radius: 30px;
 }
-#email{
-    padding: 3px 2px;
-    width: 50%;
-    margin-left: 2px;
-    padding-left: 3px;
+.container {
+  height: 10px;
+  background-color: var(--light-prime);
+  width: 100%;
+  border-radius: 30px;
 }
-textarea{
-    width: 700px;
-    border: none;
-    margin-top: 5px;
-    padding-top: 5px;
-    padding-left: 5px;
+.portfolio {
+  border-bottom: 3px solid var(--light-prime);
+  height: fit-content;
+  padding: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+p a {
+  text-decoration: none;
+  color: var(--light-accent);
+  font-weight: 500;
+}
+.container-form {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact p {
+  text-align: center;
+}
+
+#lab {
+  width: 700px;
+  height: 40px;
+  display: flex;
+}
+#name {
+  width: 50%;
+  padding: 3px 2px;
+  margin-right: 2px;
+  padding-left: 3px;
+}
+#email {
+  padding: 3px 2px;
+  width: 50%;
+  margin-left: 2px;
+  padding-left: 3px;
+}
+textarea {
+  width: 700px;
+  border: none;
+  margin-top: 5px;
+  padding-top: 5px;
+  padding-left: 5px;
 }
 input,
-textarea{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 800;
-    color:black;
-    background-color: var(--text);
-    border: none;
-    border-radius: 5px;
-    
+textarea {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  color: black;
+  background-color: var(--text);
+  border: none;
+  border-radius: 5px;
 }
-#submit-btn{
-    margin-top: 10px;
-    margin-right: 5px;
-    color: var(--light-accent);
-    font-weight: 700;
+#submit-btn {
+  margin-top: 10px;
+  margin-right: 5px;
+  color: var(--light-accent);
+  font-weight: 700;
 }
-#submit-btn:hover{
-    color: black;
-    font-weight: 700;
+#submit-btn:hover {
+  color: black;
+  font-weight: 700;
 }
-.contact{
-    height: 600px;
-    padding-top: 100px;
+.contact {
+  height: 600px;
+  padding-top: 100px;
 }
-#mail{
-    color: var(--light-accent);
+#mail {
+  color: var(--light-accent);
 }
-footer{
-    width: 100%;
-    height: 100px;
-    background-color: var(--light-prime);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: var(--light-prime);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-footer p{
-    margin: 0;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    margin-bottom: 3px;
+footer p {
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  margin-bottom: 3px;
 }
-footer i{
-    margin-top: 5px;
-    color: var(--text);
-    font-size: 20px;
-    transition: 0.5s;
-    margin-left: 5px;
+footer i {
+  margin-top: 5px;
+  color: var(--text);
+  font-size: 20px;
+  transition: 0.5s;
+  margin-left: 5px;
 }
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
-.footer-img{
+.footer-img {
+  align-items: center;
+  width: 25px;
+  margin-right: 5px;
+}
+.footer {
+  display: flex;
+  align-items: center;
+}
+.fas {
+  width: 300px;
+  font-size: 80px;
+  color: #ffd100;
+  position: fixed;
+  right: -12vw;
+  bottom: 1vw;
+  display: flex;
+  opacity: 0.5;
+  animation: move 3s infinite;
+  transition: 0.5s;
+}
+@keyframes move {
+  0% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+.fas:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+.fas:active {
+  height: 90px;
+}
+.reset {
+  display: flex;
+  height: 3rem;
+  width: 8rem;
+  position: relative;
+  border-radius: 5rem;
+  background-color: var(--prime);
+  border-color: var(--light-accent);
+  border-width: 3px;
+  color: var(--light-accent);
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 1px;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+.reset:hover {
+  background-color: var(--light-accent);
+  border-color: var(--light-accent);
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 20px;
+  color: black;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.form-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+  .sections {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+@media screen and (min-width: 1023px) and (max-width: 1200px) {
+  .sections {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .sections {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+  .skills {
+    padding: 5rem 5rem;
+  }
+}
+@media screen and (min-width: 0px) and (max-width: 1023px) {
+  .sections {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    /* width: 80vw; */
+  }
+  .header {
+    /* width: 90vw; */
+    justify-content: space-evenly;
+  }
+  .container-form {
+    width: 60%;
+  }
+  #name,
+  #email {
+    width: 50%;
+    height: 30px;
+  }
+  textarea {
+    width: 400px;
+  }
+  #lab {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    width: 25px;
-    margin-right: 5px;
+  }
+  .skills {
+    padding: 3rem 3rem;
+  }
+  .intro {
+    margin-left: 1rem;
+  }
+  .fas {
+    display: none;
+  }
+  form {
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+  #lab {
+    width: 400px;
+  }
+  .row {
+    flex-direction: column !important;
+  }
+  video {
+    width: 80vw !important;
+  }
 }
-.footer{
-    display: flex;
-    align-items: center;
-}
-.fas{
-    width: 300px;
-    font-size: 80px;
-    color: #ffd100;
-    position: fixed;
-    right: -12vw;
-    bottom: 1vw;
-    display: flex;
-    opacity: 0.5;
-    animation: move 3s infinite;
-    transition: 0.5s;
-}
-@keyframes move{
-    0%{transform: translateY(-10px);}
-    50%{transform: translateY(10px);}
-    100%{transform: translateY(-10px);}
-}
-.fas:hover{
-    opacity: 1;
-    cursor: pointer;
-}
-.fas:active{
-    height: 90px;
-}
-.reset{
-    display: flex;
-    height: 3rem;
-        width: 8rem;
-        position: relative;
-        border-radius: 5rem;
-        background-color: var(--prime);
-        border-color: var(--light-accent);
-        border-width: 3px;
-        color: var(--light-accent);
-        font-weight: 700;
-        font-size: 20px;
-        letter-spacing: 1px;
-        margin-top: 10px;
-        align-items: center;
-        justify-content: center;
-        transition: 0.5s;
-}
-.reset:hover{
-    background-color: var(--light-accent);
-    border-color: var(--light-accent);
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 20px;
-    color: black;
+@media screen and (min-width: 0px) and (max-width: 750px) {
+  h1 {
+    font-size: 30px !important;
+  }
+  nav {
+    display: none;
+  }
+  .name {
     align-items: center;
     justify-content: center;
-    text-align: center;
-}
-.form-btns{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-@media screen and (min-width: 1200px)and (max-width: 1400px) {
-    .sections {
-        padding-left: 5rem;
-        padding-right: 5rem;
-    }
+    padding: 0;
+  }
+  .about {
+    padding: 1.1rem;
+  }
+  #name,
+  #email {
+    width: 37%;
+    height: 30px;
+  }
 
+  textarea {
+    width: 301px;
+  }
+  .row {
+    flex-direction: column !important;
+  }
+  video {
+    width: 80vw !important;
+  }
+  .sections {
+    padding-top: 2rem !important;
+  }
 }
-@media screen and (min-width: 1023px)and (max-width: 1200px) {
-    .sections {
-        padding-left: 5rem;
-        padding-right: 5rem;
-    }
+.mobile-video {
+  max-height: 70vh !important;
 }
-@media screen and (min-width: 768px)and (max-width: 1023px) {
-    .sections {
-            padding-left: 3rem;
-            padding-right: 3rem;
-    }
-    .skills{
-        padding: 5rem 5rem;
-        
-    }
+video {
+  width: 80%;
 }
-@media screen and (min-width: 0px)and (max-width: 1023px) {
-    .sections {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
-    .container-form{
-        width: 60%;
-    }
-    #name,
-    #email{
-        width: 50%;
-        height: 30px;
-    }
-    textarea{
-        width: 400px;
-    }
-    #lab{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .skills{
-        padding: 3rem 3rem;
-        
-    }
-    .intro{
-        margin-left: 1rem;
-    }
-    .fas{
-        display: none;
-    }
-    form{
-        margin: 0;
-        padding: 0;
-        position: relative;
-    }
-    #lab{
-        width: 400px;
-    }
+.video-cont {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+h3 {
+  color: var(--light-accent);
 }
-@media screen and (min-width: 0px)and (max-width: 750px){
-    nav{
-        display: none;
-    }
-    .name{
-        align-items: center;
-        justify-content: center;
-        padding: 0;
-    }
-    .about{
-        padding: 1.1rem;
-    }
-    #name,
-    #email {
-        width: 37%;
-        height: 30px;
-    }
-
-    textarea {
-        width: 301px;
-    }
+.intellectum-img {
+  width: 20%;
+  border: solid 2px var(--light-accent);
+}
+.row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+.footer > a {
+  color: transparent;
 }
